Add thumbs up/down gesture recognition
- Add detect_thumbs_gesture() function for thumbs up/down detection
- Use landmark positions to detect finger curling and thumb direction
- Display detected gesture on screen
- Integrate gesture detection into main video loop

--- a/hand_landmarker_live.ipynb
+++ b/hand_landmarker_live.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "e7b9225f",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "a39d91bb",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "id": "fbb16b4c",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "853b8fae",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Visualization function defined!\n"
+      "Visualization and gesture detection functions defined!\n",
+      "Gestures detected: Thumbs Up 👍, Thumbs Down 👎\n"
      ]
     }
    ],
@@ -133,16 +134,90 @@
     "FONT_THICKNESS = 2\n",
     "HANDEDNESS_TEXT_COLOR = (88, 205, 54)  # Vibrant green (BGR format)\n",
     "\n",
+    "# Hand landmark indices\n",
+    "WRIST = 0\n",
+    "THUMB_CMC = 1\n",
+    "THUMB_MCP = 2\n",
+    "THUMB_IP = 3\n",
+    "THUMB_TIP = 4\n",
+    "INDEX_MCP = 5\n",
+    "INDEX_TIP = 8\n",
+    "MIDDLE_MCP = 9\n",
+    "MIDDLE_TIP = 12\n",
+    "RING_MCP = 13\n",
+    "RING_TIP = 16\n",
+    "PINKY_MCP = 17\n",
+    "PINKY_TIP = 20\n",
+    "\n",
+    "def detect_thumbs_gesture(hand_landmarks):\n",
+    "    \"\"\"\n",
+    "    Detects thumbs up or thumbs down gesture.\n",
+    "    \n",
+    "    Logic:\n",
+    "    - Thumbs UP: Thumb tip is ABOVE (lower y) the thumb MCP, and other fingers are curled\n",
+    "    - Thumbs DOWN: Thumb tip is BELOW (higher y) the thumb MCP, and other fingers are curled\n",
+    "    - Fingers are \"curled\" when their tips are below their MCP joints (higher y value)\n",
+    "    \n",
+    "    Args:\n",
+    "        hand_landmarks: List of 21 hand landmarks from MediaPipe\n",
+    "    \n",
+    "    Returns:\n",
+    "        \"thumbs_up\", \"thumbs_down\", or None\n",
+    "    \"\"\"\n",
+    "    # Get relevant landmarks\n",
+    "    thumb_tip = hand_landmarks[THUMB_TIP]\n",
+    "    thumb_mcp = hand_landmarks[THUMB_MCP]\n",
+    "    thumb_ip = hand_landmarks[THUMB_IP]\n",
+    "    wrist = hand_landmarks[WRIST]\n",
+    "    \n",
+    "    index_tip = hand_landmarks[INDEX_TIP]\n",
+    "    index_mcp = hand_landmarks[INDEX_MCP]\n",
+    "    middle_tip = hand_landmarks[MIDDLE_TIP]\n",
+    "    middle_mcp = hand_landmarks[MIDDLE_MCP]\n",
+    "    ring_tip = hand_landmarks[RING_TIP]\n",
+    "    ring_mcp = hand_landmarks[RING_MCP]\n",
+    "    pinky_tip = hand_landmarks[PINKY_TIP]\n",
+    "    pinky_mcp = hand_landmarks[PINKY_MCP]\n",
+    "    \n",
+    "    # Check if fingers are curled (tips below MCPs - higher y value means lower on screen)\n",
+    "    index_curled = index_tip.y > index_mcp.y\n",
+    "    middle_curled = middle_tip.y > middle_mcp.y\n",
+    "    ring_curled = ring_tip.y > ring_mcp.y\n",
+    "    pinky_curled = pinky_tip.y > pinky_mcp.y\n",
+    "    \n",
+    "    # All four fingers must be curled for a thumbs gesture\n",
+    "    fingers_curled = index_curled and middle_curled and ring_curled and pinky_curled\n",
+    "    \n",
+    "    if not fingers_curled:\n",
+    "        return None\n",
+    "    \n",
+    "    # Calculate thumb direction\n",
+    "    # Thumb tip vs thumb MCP (base of thumb)\n",
+    "    thumb_vertical_diff = thumb_mcp.y - thumb_tip.y  # Positive = thumb pointing up\n",
+    "    \n",
+    "    # Threshold for detection (normalized coordinates, so ~0.1 is significant)\n",
+    "    threshold = 0.07\n",
+    "    \n",
+    "    # Also check thumb is extended (tip is far from IP joint)\n",
+    "    thumb_extended = abs(thumb_tip.y - thumb_ip.y) > 0.02\n",
+    "    \n",
+    "    if thumb_vertical_diff > threshold and thumb_extended:\n",
+    "        return \"thumbs_up\"\n",
+    "    elif thumb_vertical_diff < -threshold and thumb_extended:\n",
+    "        return \"thumbs_down\"\n",
+    "    \n",
+    "    return None\n",
+    "\n",
     "def draw_landmarks_on_image(rgb_image, detection_result):\n",
     "    \"\"\"\n",
-    "    Draws hand landmarks and handedness labels on an image.\n",
+    "    Draws hand landmarks, handedness labels, and gesture detection on an image.\n",
     "    \n",
     "    Args:\n",
     "        rgb_image: Input image as NumPy array (RGB format)\n",
     "        detection_result: MediaPipe HandLandmarkerResult object\n",
     "    \n",
     "    Returns:\n",
-    "        Image with landmarks drawn on it\n",
+    "        Tuple of (annotated_image, list of detected gestures)\n",
     "    \"\"\"\n",
     "    # Get lists of landmarks and handedness from detection result\n",
     "    hand_landmarks_list = detection_result.hand_landmarks\n",
@@ -150,11 +225,26 @@
     "    \n",
     "    # Create a copy so we don't modify the original\n",
     "    annotated_image = np.copy(rgb_image)\n",
+    "    \n",
+    "    # Store detected gestures\n",
+    "    gestures = []\n",
     "\n",
     "    # Loop through each detected hand\n",
     "    for idx in range(len(hand_landmarks_list)):\n",
     "        hand_landmarks = hand_landmarks_list[idx]  # 21 landmarks for this hand\n",
     "        handedness = handedness_list[idx]  # Left or Right classification\n",
+    "\n",
+    "        # Detect thumbs gesture\n",
+    "        gesture = detect_thumbs_gesture(hand_landmarks)\n",
+    "        \n",
+    "        # Get corrected handedness (for mirrored display)\n",
+    "        original_label = handedness[0].category_name\n",
+    "        corrected_label = \"Right\" if original_label == \"Left\" else \"Left\"\n",
+    "        \n",
+    "        gestures.append({\n",
+    "            \"hand\": corrected_label,\n",
+    "            \"gesture\": gesture\n",
+    "        })\n",
     "\n",
     "        # Convert landmarks to protobuf format (required by MediaPipe drawing utils)\n",
     "        hand_landmarks_proto = landmark_pb2.NormalizedLandmarkList()\n",
@@ -183,27 +273,33 @@
     "        # Convert normalized coordinates (0-1) to pixel coordinates\n",
     "        text_x = int(min(x_coordinates) * width)\n",
     "        text_y = int(min(y_coordinates) * height) - MARGIN\n",
-    "\n",
-    "        # Draw \"Left\" or \"Right\" label\n",
-    "        # Since we flip the image horizontally for mirror effect, we need to \n",
-    "        # swap the handedness labels (Left becomes Right, Right becomes Left)\n",
-    "        original_label = handedness[0].category_name\n",
-    "        corrected_label = \"Right\" if original_label == \"Left\" else \"Left\"\n",
+    "        \n",
+    "        # Build label with gesture\n",
+    "        if gesture == \"thumbs_up\":\n",
+    "            label = f\"{corrected_label} 👍 THUMBS UP!\"\n",
+    "            color = (0, 255, 0)  # Green for thumbs up\n",
+    "        elif gesture == \"thumbs_down\":\n",
+    "            label = f\"{corrected_label} 👎 THUMBS DOWN!\"\n",
+    "            color = (255, 0, 0)  # Red for thumbs down\n",
+    "        else:\n",
+    "            label = corrected_label\n",
+    "            color = HANDEDNESS_TEXT_COLOR\n",
     "        \n",
     "        cv2.putText(\n",
     "            annotated_image,\n",
-    "            f\"{corrected_label}\",  # Corrected label for mirrored display\n",
+    "            label,\n",
     "            (text_x, text_y),\n",
     "            cv2.FONT_HERSHEY_DUPLEX,\n",
     "            FONT_SIZE,\n",
-    "            HANDEDNESS_TEXT_COLOR,\n",
+    "            color,\n",
     "            FONT_THICKNESS,\n",
     "            cv2.LINE_AA  # Anti-aliased (smooth) text\n",
     "        )\n",
     "\n",
-    "    return annotated_image\n",
+    "    return annotated_image, gestures\n",
     "\n",
-    "print(\"Visualization function defined!\")"
+    "print(\"Visualization and gesture detection functions defined!\")\n",
+    "print(\"Gestures detected: Thumbs Up 👍, Thumbs Down 👎\")"
    ]
   },
   {
@@ -222,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "id": "020640b8",
    "metadata": {},
    "outputs": [
@@ -240,10 +336,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0000 00:00:1768381289.250692    5709 gl_context_egl.cc:85] Successfully initialized EGL. Major : 1 Minor: 5\n",
-      "I0000 00:00:1768381289.252478    6156 gl_context.cc:357] GL version: 3.2 (OpenGL ES 3.2 Mesa 25.0.7-0ubuntu0.24.04.2), renderer: Mesa Intel(R) Graphics (ADL GT2)\n",
-      "W0000 00:00:1768381289.264137    6164 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
-      "W0000 00:00:1768381289.280157    6162 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n"
+      "I0000 00:00:1768382607.221729    5709 gl_context_egl.cc:85] Successfully initialized EGL. Major : 1 Minor: 5\n",
+      "I0000 00:00:1768382607.223716    6421 gl_context.cc:357] GL version: 3.2 (OpenGL ES 3.2 Mesa 25.0.7-0ubuntu0.24.04.2), renderer: Mesa Intel(R) Graphics (ADL GT2)\n",
+      "W0000 00:00:1768382607.235733    6432 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
+      "W0000 00:00:1768382607.248716    6425 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n"
      ]
     }
    ],
@@ -274,22 +370,29 @@
    "id": "5f384e7d",
    "metadata": {},
    "source": [
-    "## Step 6: Run Live Detection! 🎥\n",
+    "## Step 6: Run Live Detection with Gesture Recognition! 🎥\n",
     "\n",
-    "This cell opens your webcam and runs hand detection in real-time.\n",
+    "This cell opens your webcam and runs hand detection with **thumbs up/down gesture recognition**.\n",
+    "\n",
+    "**Gesture Detection Logic:**\n",
+    "- **Thumbs UP 👍**: Thumb tip is ABOVE the thumb base, all other fingers are curled (closed fist)\n",
+    "- **Thumbs DOWN 👎**: Thumb tip is BELOW the thumb base, all other fingers are curled\n",
     "\n",
     "**Controls:**\n",
     "- Press **'q'** to quit and close the window\n",
+    "- Press **'b'** to toggle Blue Glove Mode\n",
     "\n",
     "**What you'll see:**\n",
     "- Live video feed with hand landmarks drawn\n",
-    "- FPS (frames per second) displayed in top-left corner\n",
-    "- \"Left\" or \"Right\" labels on each detected hand"
+    "- FPS (frames per second) displayed\n",
+    "- \"Left\" or \"Right\" labels on each detected hand\n",
+    "- **Green \"THUMBS UP!\"** when showing thumbs up\n",
+    "- **Red \"THUMBS DOWN!\"** when showing thumbs down"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "caa8db0b",
    "metadata": {},
    "outputs": [
@@ -300,21 +403,10 @@
       "Camera opened successfully!\n",
       "Press 'q' to quit, 'b' to toggle Blue Glove Mode\n",
       "----------------------------------------\n",
+      "Show THUMBS UP 👍 or THUMBS DOWN 👎 to the camera!\n",
+      "----------------------------------------\n",
       "Blue Glove Mode: OFF\n",
-      "Blue Glove Mode: ON\n",
-      "Blue Glove Mode: OFF\n",
-      "Blue Glove Mode: ON\n",
-      "Blue Glove Mode: OFF\n",
-      "Blue Glove Mode: ON\n",
-      "Blue Glove Mode: OFF\n",
-      "Blue Glove Mode: ON\n",
-      "Blue Glove Mode: OFF\n",
-      "Blue Glove Mode: ON\n",
-      "Blue Glove Mode: OFF\n",
-      "Blue Glove Mode: ON\n",
-      "\n",
-      "Quitting...\n",
-      "Camera released and windows closed!\n"
+      "Blue Glove Mode: ON\n"
      ]
     }
    ],
@@ -330,6 +422,8 @@
     "    print(\"Camera opened successfully!\")\n",
     "    print(\"Press 'q' to quit, 'b' to toggle Blue Glove Mode\")\n",
     "    print(\"-\" * 40)\n",
+    "    print(\"Show THUMBS UP 👍 or THUMBS DOWN 👎 to the camera!\")\n",
+    "    print(\"-\" * 40)\n",
     "\n",
     "# Variables for FPS calculation\n",
     "prev_time = 0\n",
@@ -337,6 +431,9 @@
     "\n",
     "# Toggle for blue glove mode (swap R and B channels)\n",
     "BLUE_GLOVE_MODE = True  # Set to True when wearing blue gloves\n",
+    "\n",
+    "# Gesture counters for display\n",
+    "gesture_counts = {\"thumbs_up\": 0, \"thumbs_down\": 0}\n",
     "\n",
     "# Main loop - runs until 'q' is pressed\n",
     "while cap.isOpened():\n",
@@ -354,43 +451,47 @@
     "    frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
     "    \n",
     "    # Step 3.5: BLUE GLOVE MODE - Swap R and B channels for detection\n",
-    "    # This makes blue gloves appear orange/red, which MediaPipe can detect better\n",
     "    if BLUE_GLOVE_MODE:\n",
-    "        # Swap R and B channels and make contiguous for MediaPipe\n",
     "        frame_for_detection = np.ascontiguousarray(frame_rgb[:, :, [2, 1, 0]])\n",
     "    else:\n",
     "        frame_for_detection = frame_rgb\n",
     "    \n",
-    "    # Step 4: Create MediaPipe Image object (use color-swapped frame for detection)\n",
+    "    # Step 4: Create MediaPipe Image object\n",
     "    mp_image = mp.Image(image_format=mp.ImageFormat.SRGB, data=frame_for_detection)\n",
     "    \n",
-    "    # Step 5: Get current timestamp in milliseconds (required for VIDEO mode)\n",
+    "    # Step 5: Get current timestamp in milliseconds\n",
     "    timestamp_ms = int(time.time() * 1000)\n",
     "    \n",
     "    # Step 6: Run hand detection\n",
     "    detection_result = detector.detect_for_video(mp_image, timestamp_ms)\n",
     "    \n",
-    "    # Step 7: Draw landmarks on the ORIGINAL frame (not color-swapped)\n",
-    "    # This way the display looks normal but detection uses swapped colors\n",
-    "    annotated_frame = draw_landmarks_on_image(frame_rgb, detection_result)\n",
+    "    # Step 7: Draw landmarks and detect gestures\n",
+    "    annotated_frame, gestures = draw_landmarks_on_image(frame_rgb, detection_result)\n",
+    "    \n",
+    "    # Count gestures\n",
+    "    for g in gestures:\n",
+    "        if g[\"gesture\"] == \"thumbs_up\":\n",
+    "            gesture_counts[\"thumbs_up\"] += 1\n",
+    "        elif g[\"gesture\"] == \"thumbs_down\":\n",
+    "            gesture_counts[\"thumbs_down\"] += 1\n",
     "    \n",
     "    # Step 8: Convert back to BGR for OpenCV display\n",
     "    annotated_frame_bgr = cv2.cvtColor(annotated_frame, cv2.COLOR_RGB2BGR)\n",
     "    \n",
     "    # Step 9: Calculate and display FPS\n",
     "    current_time = time.time()\n",
-    "    fps = 1 / (current_time - prev_btime) if prev_time > 0 else 0\n",
+    "    fps = 1 / (current_time - prev_time) if prev_time > 0 else 0\n",
     "    prev_time = current_time\n",
     "    \n",
     "    # Draw FPS on the frame\n",
     "    cv2.putText(\n",
     "        annotated_frame_bgr,\n",
     "        f\"FPS: {fps:.1f}\",\n",
-    "        (10, 30),  # Position: top-left corner\n",
+    "        (10, 30),\n",
     "        cv2.FONT_HERSHEY_SIMPLEX,\n",
-    "        1,  # Font size\n",
-    "        (0, 255, 0),  # Green color (BGR)\n",
-    "        2,  # Thickness\n",
+    "        1,\n",
+    "        (0, 255, 0),\n",
+    "        2,\n",
     "        cv2.LINE_AA\n",
     "    )\n",
     "    \n",
@@ -399,7 +500,7 @@
     "    cv2.putText(\n",
     "        annotated_frame_bgr,\n",
     "        f\"Hands: {num_hands}\",\n",
-    "        (10, 70),  # Position: below FPS\n",
+    "        (10, 70),\n",
     "        cv2.FONT_HERSHEY_SIMPLEX,\n",
     "        1,\n",
     "        (0, 255, 0),\n",
@@ -408,7 +509,7 @@
     "    )\n",
     "    \n",
     "    # Show blue glove mode status\n",
-    "    mode_text = \"Blue Glove Mode: ON (press 'b' to toggle)\" if BLUE_GLOVE_MODE else \"Blue Glove Mode: OFF (press 'b' to toggle)\"\n",
+    "    mode_text = \"Blue Glove: ON\" if BLUE_GLOVE_MODE else \"Blue Glove: OFF\"\n",
     "    cv2.putText(\n",
     "        annotated_frame_bgr,\n",
     "        mode_text,\n",
@@ -420,8 +521,50 @@
     "        cv2.LINE_AA\n",
     "    )\n",
     "    \n",
+    "    # Show gesture instructions\n",
+    "    cv2.putText(\n",
+    "        annotated_frame_bgr,\n",
+    "        \"Show THUMBS UP or DOWN!\",\n",
+    "        (10, 150),\n",
+    "        cv2.FONT_HERSHEY_SIMPLEX,\n",
+    "        0.7,\n",
+    "        (255, 255, 255),\n",
+    "        2,\n",
+    "        cv2.LINE_AA\n",
+    "    )\n",
+    "    \n",
+    "    # Display current gesture detection in big text at bottom\n",
+    "    current_gesture = None\n",
+    "    for g in gestures:\n",
+    "        if g[\"gesture\"]:\n",
+    "            current_gesture = g[\"gesture\"]\n",
+    "            break\n",
+    "    \n",
+    "    if current_gesture == \"thumbs_up\":\n",
+    "        cv2.putText(\n",
+    "            annotated_frame_bgr,\n",
+    "            \"THUMBS UP!\",\n",
+    "            (frame.shape[1] // 2 - 150, frame.shape[0] - 50),\n",
+    "            cv2.FONT_HERSHEY_SIMPLEX,\n",
+    "            1.5,\n",
+    "            (0, 255, 0),\n",
+    "            3,\n",
+    "            cv2.LINE_AA\n",
+    "        )\n",
+    "    elif current_gesture == \"thumbs_down\":\n",
+    "        cv2.putText(\n",
+    "            annotated_frame_bgr,\n",
+    "            \"THUMBS DOWN!\",\n",
+    "            (frame.shape[1] // 2 - 180, frame.shape[0] - 50),\n",
+    "            cv2.FONT_HERSHEY_SIMPLEX,\n",
+    "            1.5,\n",
+    "            (0, 0, 255),\n",
+    "            3,\n",
+    "            cv2.LINE_AA\n",
+    "        )\n",
+    "    \n",
     "    # Step 10: Display the frame in a window\n",
-    "    cv2.imshow('Hand Landmark Detection - Press Q to Quit', annotated_frame_bgr)\n",
+    "    cv2.imshow('Hand Gesture Detection - Press Q to Quit, B to Toggle Blue Glove Mode', annotated_frame_bgr)\n",
     "    \n",
     "    # Step 11: Check for key presses\n",
     "    key = cv2.waitKey(1) & 0xFF\n",
@@ -437,7 +580,10 @@
     "cap.release()\n",
     "cv2.destroyAllWindows()\n",
     "\n",
-    "print(\"Camera released and windows closed!\")"
+    "print(\"Camera released and windows closed!\")\n",
+    "print(f\"\\nGesture Summary:\")\n",
+    "print(f\"  Thumbs Up detected: {gesture_counts['thumbs_up']} frames\")\n",
+    "print(f\"  Thumbs Down detected: {gesture_counts['thumbs_down']} frames\")"
    ]
   },
   {
@@ -468,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "e5e97848",
    "metadata": {},
    "outputs": [
