--- a/hand_landmarker_live.ipynb
+++ b/hand_landmarker_live.ipynb
@@ -12,7 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "id": "63964027",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "e7b9225f",
    "metadata": {},
    "outputs": [],
@@ -32,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "a39d91bb",
    "metadata": {},
    "outputs": [
@@ -72,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "fbb16b4c",
    "metadata": {},
    "outputs": [
@@ -114,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "853b8fae",
    "metadata": {},
    "outputs": [
@@ -222,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "020640b8",
    "metadata": {},
    "outputs": [
@@ -240,10 +248,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I0000 00:00:1768381289.250692    5709 gl_context_egl.cc:85] Successfully initialized EGL. Major : 1 Minor: 5\n",
-      "I0000 00:00:1768381289.252478    6156 gl_context.cc:357] GL version: 3.2 (OpenGL ES 3.2 Mesa 25.0.7-0ubuntu0.24.04.2), renderer: Mesa Intel(R) Graphics (ADL GT2)\n",
-      "W0000 00:00:1768381289.264137    6164 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
-      "W0000 00:00:1768381289.280157    6162 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n"
+      "I0000 00:00:1768643665.210989    9328 gl_context_egl.cc:85] Successfully initialized EGL. Major : 1 Minor: 5\n",
+      "I0000 00:00:1768643665.219339    9969 gl_context.cc:357] GL version: 3.2 (OpenGL ES 3.2 Mesa 25.0.7-0ubuntu0.24.04.2), renderer: Mesa Intel(R) Graphics (ADL GT2)\n",
+      "W0000 00:00:1768643665.246944    9975 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
+      "W0000 00:00:1768643665.296306    9972 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n"
      ]
     }
    ],
@@ -289,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "caa8db0b",
    "metadata": {},
    "outputs": [
@@ -300,18 +308,6 @@
       "Camera opened successfully!\n",
       "Press 'q' to quit, 'b' to toggle Blue Glove Mode\n",
       "----------------------------------------\n",
-      "Blue Glove Mode: OFF\n",
-      "Blue Glove Mode: ON\n",
-      "Blue Glove Mode: OFF\n",
-      "Blue Glove Mode: ON\n",
-      "Blue Glove Mode: OFF\n",
-      "Blue Glove Mode: ON\n",
-      "Blue Glove Mode: OFF\n",
-      "Blue Glove Mode: ON\n",
-      "Blue Glove Mode: OFF\n",
-      "Blue Glove Mode: ON\n",
-      "Blue Glove Mode: OFF\n",
-      "Blue Glove Mode: ON\n",
       "\n",
       "Quitting...\n",
       "Camera released and windows closed!\n"
@@ -379,7 +375,7 @@
     "    \n",
     "    # Step 9: Calculate and display FPS\n",
     "    current_time = time.time()\n",
-    "    fps = 1 / (current_time - prev_btime) if prev_time > 0 else 0\n",
+    "    fps = 1 / (current_time - prev_time) if prev_time > 0 else 0\n",
     "    prev_time = current_time\n",
     "    \n",
     "    # Draw FPS on the frame\n",
@@ -468,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "id": "e5e97848",
    "metadata": {},
    "outputs": [
